[tool.poetry]
name = "py-homework-regex"
version = "0.1.0"
description = ""
authors = ["Andrey Semakin <and-semakin@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
more_itertools = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
